@@ -34,11 +34,13 @@ FILES =  \
 	MonoDevelop.Deployment.Linux/DotDesktopViewWidget.cs \
 	MonoDevelop.Deployment.Linux/LinuxDeployData.cs \
 	MonoDevelop.Deployment.Linux/LinuxDeployExtension.cs \
+	MonoDevelop.Deployment.Linux/LinuxDeploymentSetup.cs \
 	MonoDevelop.Deployment.Linux/LinuxIntegrationProjectFeature.cs \
 	MonoDevelop.Deployment.Linux/LinuxTargetDirectory.cs \
 	MonoDevelop.Deployment.Linux/MenuCategorySelectorDialog.cs
 
 RES =  \
+	app.desktop.xft.xml \
 	gtk-gui/gui.stetic \
 	gtk-gui/objects.xml \
 	MonoDevelop.Deployment.Linux.addin.xml \
