@@ -38,6 +38,8 @@
     <File name="gtk-gui/MonoDevelop.Deployment.Linux.MenuCategorySelectorDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Deployment.Linux.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="app.desktop.xft.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="MonoDevelop.Deployment.Linux/LinuxDeploymentSetup.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Core" />
